brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__functions__parse_function_dotted_name.snap
---
source: brush-parser/src/parser/tests/functions.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "dolib.so() { :; }",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Function(FunctionDefinition(
                fname: Word(
                  value: "dolib.so",
                  loc: "[location]",
                ),
                body: FunctionBody(BraceGroup(BraceGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            word_or_name: Some(Word(
                              value: ":",
                              loc: "[location]",
                            )),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                )), None),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
